# stocra-web

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: entrypoint  lint
web/: routes.py
web/static/: index.html  openapi.yaml
