[tool.poetry]
name = "web"
version = "1.0.0"
description = ""
authors = ["Lukáš Vokráčko <lukas@vokracko.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn", "orjson"], version = "*"}
uvicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pylint = "*"
typing-extensions = "*"
mccabe = "*"
isort = "*"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.master]
max-line-length = 120
output-format = [
    "colorized",
]
load-plugins = [
    "pylint.extensions.mccabe",
]
ignore = [
    "tests",
]
disable = [
    "missing-docstring",
    "empty-docstring",
    "no-self-use",
    "no-else-return",
    "too-few-public-methods",
    "use-dict-literal",
]
extension-pkg-whitelist = [
    "pydantic",
]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
cache_dir = "/dev/null"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
ignore_missing_imports = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
